Streamline overview docs and workflows

--- a/core-features/explore.mdx
+++ b/core-features/explore.mdx
@@ -9,37 +9,18 @@ description: "Investigate raw conversations, cluster patterns, and capture stori
 
 Explore is where researchers and storytellers live. It lets you peel back the AI summaries and get eyes on the conversations themselves—perfect for crafting decks, validating hunches, and finding the quote that seals the argument.
 
-## Guided workflow
+## How the table works
 
-1. **Start with a saved search or topic** — e.g., *“pricing feedback from founders”* or *“onboarding blockers”*.  
-2. **Scan the auto-generated briefs** — spot emerging patterns, sentiment splits, and notable voices.  
-3. **Dive into primary evidence** — open Reddit threads, tweets, or video transcripts without leaving Humyn.  
-4. **Capture the story** — bookmark the thread, tag it, and assign a follow-up owner if action is required.
+Explore centers on a live table of every curated comment. Each row shows:
 
-## Useful view templates
+- **Topic** — the conversation cluster or theme Humyn assigned.  
+- **Source** — where the comment came from, whether Reddit, Twitter, or YouTube.  
+- **Aspect** — the focal dimension of the conversation (e.g., features, usability, price, customization).  
+- **Weight** — the relative importance Humyn assigns based on engagement and relevance.  
+- **Date added** — when the comment landed in your workspace.
 
-- **Persona spotlight** — Compare how designers vs. marketers talk about your product.  
-- **Launch retro** — Filter to comments posted after your announcement to measure impact.  
-- **Competitive watch** — Monitor how communities describe alternatives and feature gaps.  
-- **Objection library** — Collect recurring concerns you can tackle in messaging or product.
+Filter the table by sentiment, aspect, keyword, or time range to zero in on what matters right now. The individual comment analysis panel appears beneath the table with:
 
-## Collaboration hooks
-
-| Action | Outcome |
-| --- | --- |
-| Pin a conversation | Add the thread to a shared collection or Loom briefing. |
-| Export quotes | Copy ready-to-use snippets into decks, docs, or social proof. |
-| Send to delivery tools | Push cards into Linear, Asana, or Notion for owners to execute. |
-| Share a quick link | Drop the Explore filter in Slack/Discord for async reviews. |
-
-## Staying accurate
-
-- Spot check AI summaries against the original thread to maintain trust.  
-- Maintain a glossary for custom tags so everyone labels threads the same way.  
-- Use downvotes or manual dismissals to keep the feed focused on high-signal content.
-
-## Connected surfaces
-
-- Feed chart-ready insights into [Dashboard](/core-features/dashboard).  
-- Quantify impact in [Metrics](/core-features/metrics).  
-- Generate conversational follow-ups with [Chat with Hue](/core-features/chat-with-hue).
+- A distilled AI summary for the exact comment.  
+- Highlighted positive and negative snippets so you can see why it scored that way.  
+- Source context and direct links when you need to read the entire thread.
