--- a/core-features/metrics.mdx
+++ b/core-features/metrics.mdx
@@ -7,26 +7,20 @@ description: "Translate Humyn signals into the numbers leaders expect"
 
 Metrics turns Humyn’s qualitative signals into leader-ready scorecards. It gives you north-star indicators you can bring to board decks, roadmap reviews, and GTM readouts without guessing.
 
-<Columns cols={2}>
-  <img
-    src="/assets/metrics-mockup.png"
-    alt="Humyn metrics mockup illustrating sentiment and volume trends"
-    style={{ borderRadius: "1rem", boxShadow: "0 24px 60px rgba(15, 23, 42, 0.16)" }}
-  />
-  <img
-    src="/screenshots/example_comment_analysis.png"
-    alt="Detailed metric view with qualitative drill-down"
-    style={{ borderRadius: "1rem", boxShadow: "0 24px 60px rgba(15, 23, 42, 0.16)" }}
-  />
-</Columns>
+<img
+  src="/assets/metrics-mockup.png"
+  alt="Humyn metrics mockup illustrating sentiment and volume trends"
+  style={{ borderRadius: "1rem", margin: "2rem 0", boxShadow: "0 24px 60px rgba(15, 23, 42, 0.16)" }}
+/>
 
 ## How it works
 
-| Layer | What you see | Why you care |
-| --- | --- | --- |
-| KPI tiles | Volume, sentiment mix, blocker density, launch lift. | Gives execs a fast answer: are we trending the right way? |
-| Drill-down panels | Supporting quotes, theme clusters, audience breakdowns. | Pairs the metric with direct evidence so trust stays high. |
-| Alerts & trends | Threshold indicators and delta badges. | Surface inflection points before they become fire drills. |
+Humyn breaks every dataset into sentiment and aspect-driven slices so teams can see the “why” behind the numbers:
+
+- **Sentiment mix** — Percent of comments labeled positive, negative, and neutral so you can quantify mood shifts over time.
+- **Aspect insights** — Topic clusters such as “Features”, “Usability”, “Price”, and “Customization” that highlight what people focus on most.
+- **Trend deltas** — Week-over-week changes that flag when enthusiasm spikes or friction grows.
+- **Linked evidence** — Every metric anchors back to supporting quotes so you never lose the context.
 
 ## Build your Metric catalog
 
@@ -57,6 +51,12 @@ Metrics turns Humyn’s qualitative signals into leader-ready scorecards. It giv
 <Tip>
 Mirror these KPIs inside Slides, Notion, or Mode dashboards so execs see the same numbers everywhere.
 </Tip>
+
+<img
+  src="/screenshots/example_comment_analysis.png"
+  alt="Detailed metric view with qualitative drill-down"
+  style={{ borderRadius: "1rem", margin: "2rem 0", boxShadow: "0 24px 60px rgba(15, 23, 42, 0.16)" }}
+/>
 
 ## Keep the system fresh
 
