Refine explore and metrics visuals

--- a/core-features/explore.mdx
+++ b/core-features/explore.mdx
@@ -7,20 +7,26 @@ description: "Investigate raw conversations, cluster patterns, and capture stori
 
 ## Why Explore
 
-Explore is where researchers and storytellers live. It lets you peel back the AI summaries and get eyes on the conversations themselves—perfect for crafting decks, validating hunches, and finding the quote that seals the argument.
+Explore is where <mark>researchers</mark> and <mark>storytellers</mark> live. It lets you peel back the <mark>AI summaries</mark> and get eyes on the conversations themselves—perfect for crafting decks, validating hunches, and finding the quote that seals the argument.
+
+<img
+  src="/screenshots/example_comment_analysis.png"
+  alt="Detailed comment analysis with AI highlights"
+  style={{ borderRadius: "1rem", margin: "2rem 0", boxShadow: "0 24px 60px rgba(15, 23, 42, 0.16)" }}
+/>
 
 ## How the table works
 
 Explore centers on a live table of every curated comment. Each row shows:
 
-- **Topic** — the conversation cluster or theme Humyn assigned.  
-- **Source** — where the comment came from, whether Reddit, Twitter, or YouTube.  
-- **Aspect** — the focal dimension of the conversation (e.g., features, usability, price, customization).  
-- **Weight** — the relative importance Humyn assigns based on engagement and relevance.  
-- **Date added** — when the comment landed in your workspace.
+- **<mark>Topic</mark>** — the conversation cluster or theme Humyn assigned.  
+- **<mark>Source</mark>** — where the comment came from, whether Reddit, Twitter, or YouTube.  
+- **<mark>Aspect</mark>** — the focal dimension of the conversation (e.g., features, usability, price, customization).  
+- **<mark>Weight</mark>** — the relative importance Humyn assigns based on engagement and relevance.  
+- **<mark>Date added</mark>** — when the comment landed in your workspace.
 
-Filter the table by sentiment, aspect, keyword, or time range to zero in on what matters right now. The individual comment analysis panel appears beneath the table with:
+Filter the table by <mark>sentiment</mark>, <mark>aspect</mark>, <mark>keyword</mark>, or <mark>time range</mark> to zero in on what matters right now. The individual comment analysis panel appears beneath the table with:
 
-- A distilled AI summary for the exact comment.  
-- Highlighted positive and negative snippets so you can see why it scored that way.  
-- Source context and direct links when you need to read the entire thread.
+- A distilled <mark>AI summary</mark> for the exact comment.  
+- Highlighted <mark>positive</mark> and <mark>negative</mark> snippets so you can see why it scored that way.  
+- <mark>Source context</mark> and direct links when you need to read the entire thread.
