--- a/core-features/metrics.mdx
+++ b/core-features/metrics.mdx
@@ -5,7 +5,7 @@ description: "Translate Humyn signals into the numbers leaders expect"
 
 ## Why Metrics exists
 
-Metrics turns Humyn’s qualitative signals into leader-ready scorecards. It gives you north-star indicators you can bring to board decks, roadmap reviews, and GTM readouts without guessing.
+Metrics turns Humyn’s qualitative signals into <mark>leader-ready scorecards</mark>. It gives you <mark>north-star indicators</mark> you can bring to board decks, roadmap reviews, and GTM readouts without guessing.
 
 <img
   src="/assets/metrics-mockup.png"
@@ -17,46 +17,9 @@ Metrics turns Humyn’s qualitative signals into leader-ready scorecards. It giv
 
 Humyn breaks every dataset into sentiment and aspect-driven slices so teams can see the “why” behind the numbers:
 
-- **Sentiment mix** — Percent of comments labeled positive, negative, and neutral so you can quantify mood shifts over time.
-- **Aspect insights** — Topic clusters such as “Features”, “Usability”, “Price”, and “Customization” that highlight what people focus on most.
-- **Trend deltas** — Week-over-week changes that flag when enthusiasm spikes or friction grows.
-- **Linked evidence** — Every metric anchors back to supporting quotes so you never lose the context.
-
-## Build your Metric catalog
-
-<Columns cols={2}>
-  <Card title="Choose the decisions" icon="flag">
-    Start with the questions leaders ask most: “Are launches moving the needle?”, “Where are we bleeding trust?”, “Which persona is surging?”
-  </Card>
-  <Card title="Define formulas" icon="calculator">
-    Document the numerator, denominator, and filters for each metric. Keep it down to 3–5 KPIs per initiative.
-  </Card>
-  <Card title="Assign owners & thresholds" icon="user-shield">
-    Clarify who watches each metric and when to raise a flag. Tie alerts to Slack or email so changes don’t get buried.
-  </Card>
-  <Card title="Link to evidence" icon="link">
-    Every tile should click through to Explore views or saved Hue prompts so teams can review the supporting quotes instantly.
-  </Card>
-</Columns>
-
-## Sample metric set
-
-| Metric | Formula | Refresh cadence | Primary consumer |
-| --- | --- | --- | --- |
-| Signal Volume | Count of new curated conversations (Reddit/Twitter/YouTube) this week. | Daily | Product leadership |
-| Positive Momentum | % of comments tagged “praise” or “adoption win.” | Daily | Exec updates |
-| Blocker Density | High-severity objections ÷ total threads. | Weekly | Support & Ops |
-| Launch Lift | Sentiment delta pre/post campaign. | Weekly | GTM & Marketing |
-
-<Tip>
-Mirror these KPIs inside Slides, Notion, or Mode dashboards so execs see the same numbers everywhere.
-</Tip>
-
-<img
-  src="/screenshots/example_comment_analysis.png"
-  alt="Detailed metric view with qualitative drill-down"
-  style={{ borderRadius: "1rem", margin: "2rem 0", boxShadow: "0 24px 60px rgba(15, 23, 42, 0.16)" }}
-/>
+- <mark>Sentiment mix</mark> — Percent of comments labeled <mark>positive</mark>, <mark>negative</mark>, and <mark>neutral</mark> so you can quantify mood shifts over time.
+- <mark>Aspect insights</mark> — Topic clusters such as <mark>Features</mark>, <mark>Usability</mark>, <mark>Price</mark>, and <mark>Customization</mark> that highlight what people focus on most.
+- <mark>Linked evidence</mark> — Every metric anchors back to supporting quotes so you never lose the context.
 
 ## Keep the system fresh
 
