Add Add Comments guide and refine explore/metrics

--- a/core-features/explore.mdx
+++ b/core-features/explore.mdx
@@ -9,12 +9,6 @@ description: "Investigate raw conversations, cluster patterns, and capture stori
 
 Explore is where <mark>researchers</mark> and <mark>storytellers</mark> live. It lets you peel back the <mark>AI summaries</mark> and get eyes on the conversations themselves—perfect for crafting decks, validating hunches, and finding the quote that seals the argument.
 
-<img
-  src="/screenshots/example_comment_analysis.png"
-  alt="Detailed comment analysis with AI highlights"
-  style={{ borderRadius: "1rem", margin: "2rem 0", boxShadow: "0 24px 60px rgba(15, 23, 42, 0.16)" }}
-/>
-
 ## How the table works
 
 Explore centers on a live table of every curated comment. Each row shows:
@@ -25,8 +19,23 @@ Explore centers on a live table of every curated comment. Each row shows:
 - **<mark>Weight</mark>** — the relative importance Humyn assigns based on engagement and relevance.  
 - **<mark>Date added</mark>** — when the comment landed in your workspace.
 
+<img
+  src="/screenshots/example_comment_analysis.png"
+  alt="Detailed comment analysis with AI highlights"
+  style={{ borderRadius: "1rem", margin: "2rem 0", boxShadow: "0 24px 60px rgba(15, 23, 42, 0.16)" }}
+/>
+
 Filter the table by <mark>sentiment</mark>, <mark>aspect</mark>, <mark>keyword</mark>, or <mark>time range</mark> to zero in on what matters right now. The individual comment analysis panel appears beneath the table with:
 
 - A distilled <mark>AI summary</mark> for the exact comment.  
 - Highlighted <mark>positive</mark> and <mark>negative</mark> snippets so you can see why it scored that way.  
 - <mark>Source context</mark> and direct links when you need to read the entire thread.
+
+## Detailed Comment Analysis
+
+Every comment card surfaces the metadata you need to act fast:
+
+- <mark>Keywords</mark> that triggered the match, so you know which prompt or aspect pulled it in.  
+- Inline <mark>sentiment highlights</mark> that pinpoint praise, blockers, and questions line by line.  
+- A concise <mark>AI recap</mark> that captures the takeaway in one sentence.  
+- A direct <mark>source link</mark> so you can jump into Reddit, Twitter, or YouTube for full context when needed.
