Polish roadmap naming and Hue visuals

--- a/core-features/chat-with-hue.mdx
+++ b/core-features/chat-with-hue.mdx
@@ -3,18 +3,11 @@ title: "Chat with Hue"
 description: "Ask natural-language questions and get instant answers from Humyn"
 ---
 
-<Columns cols={2}>
-  <img
-    src="/screenshots/hue_chat.png"
-    alt="Chat with Hue conversation showing summarized insight"
-    style={{ borderRadius: "1rem", boxShadow: "0 20px 60px rgba(15, 23, 42, 0.16)" }}
-  />
-  <img
-    src="/screenshots/source_citation.png"
-    alt="Chat with Hue citation panel showing linked source threads"
-    style={{ borderRadius: "1rem", boxShadow: "0 20px 60px rgba(15, 23, 42, 0.16)" }}
-  />
-</Columns>
+<img
+  src="/screenshots/hue_chat.png"
+  alt="Chat with Hue conversation showing summarized insight"
+  style={{ borderRadius: "1rem", marginBottom: "2rem", boxShadow: "0 20px 60px rgba(15, 23, 42, 0.16)" }}
+/>
 
 ## What Hue unlocks
 
@@ -40,6 +33,12 @@ Hue is your AI research partner. Instead of combing through dashboards, you can 
 <Callout>
 Every answer includes inline highlights and a **Citations** panel so you can jump straight to the source threads without leaving the chat.
 </Callout>
+
+<img
+  src="/screenshots/source_citation.png"
+  alt="Chat with Hue citation panel showing linked source threads"
+  style={{ borderRadius: "1rem", margin: "2rem 0", boxShadow: "0 20px 60px rgba(15, 23, 42, 0.16)" }}
+/>
 
 ## Prompt library by role
 
