--- a/core-features/explore.mdx
+++ b/core-features/explore.mdx
@@ -25,11 +25,7 @@ Explore centers on a live table of every curated comment. Each row shows:
   style={{ borderRadius: "1rem", margin: "2rem 0", boxShadow: "0 24px 60px rgba(15, 23, 42, 0.16)" }}
 />
 
-Filter the table by <mark>sentiment</mark>, <mark>aspect</mark>, <mark>keyword</mark>, or <mark>time range</mark> to zero in on what matters right now. The individual comment analysis panel appears beneath the table with:
-
-- A distilled <mark>AI summary</mark> for the exact comment.  
-- Highlighted <mark>positive</mark> and <mark>negative</mark> snippets so you can see why it scored that way.  
-- <mark>Source context</mark> and direct links when you need to read the entire thread.
+Use filters for <mark>sentiment</mark>, <mark>aspect</mark>, <mark>keywords</mark>, or <mark>time ranges</mark> to focus the grid on the moment that matters.
 
 ## Detailed Comment Analysis
 
