--- a/home/roadmap.mdx
+++ b/home/roadmap.mdx
@@ -1,9 +1,9 @@
 ---
-title: "Humyn Roadmap"
+title: "Roadmap"
 description: "See where Humyn is headed next and help us prioritize the most valuable insights."
 ---
 
-# Humyn Roadmap
+# Roadmap
 
 We build Humyn to uncover <mark>real community insight</mark> for builders, strategists, and researchers. The roadmap below reflects what’s in motion right now. Add your voice in `#product-feedback` on [Discord](https://discord.gg/bycbt28zpk) or email `support@humyn.studio`.
 
