Improve content organization and add AI summaries

--- a/core-features/add-comments.mdx
+++ b/core-features/add-comments.mdx
@@ -1,6 +1,7 @@
 ---
 title: "Add Comments"
 description: "Seed Humyn with the sources, keywords, and topics that drive each insight run"
+aiSummary: "Define research topics, keywords, and source URLs so Humyn can ingest data and deliver insights." 
 ---
 
 # Add Comments
