--- a/core-features/chat-with-hue.mdx
+++ b/core-features/chat-with-hue.mdx
@@ -1,6 +1,7 @@
 ---
 title: "Chat with Hue"
 description: "Ask natural-language questions and get instant answers from Humyn"
+aiSummary: "Learn how to craft persona-specific prompts, understand citation-backed answers, and turn Hue responses into actionable insight."
 ---
 
 <img
@@ -42,40 +43,44 @@ Every answer includes inline highlights and a **Citations** panel so you can jum
 
 ## Prompt library by role
 
-<Tabs>
-  <Tab title="Product managers">
+<Accordion>
+  <AccordionItem title="Product managers">
     <ul>
       <li><strong>Summarize voices</strong> — “How do our power users describe the core job-to-be-done in this project?”</li>
       <li><strong>Flag risks</strong> — “Which blockers are trending upward this week and why?”</li>
       <li><strong>Compare competitors</strong> — “List the feature gaps customers mention most versus [competitor].”</li>
       <li><strong>Justify roadmap</strong> — “Provide three quotes that support prioritizing [feature] next sprint.”</li>
     </ul>
-  </Tab>
-  <Tab title="Product designers">
+  </AccordionItem>
+  <AccordionItem title="Product designers">
     <ul>
       <li><strong>Map emotions</strong> — “What sensory or emotional language do people use when they love or hate our workflow?”</li>
       <li><strong>Spot friction</strong> — “Highlight onboarding steps that feel confusing or high effort.”</li>
       <li><strong>Visualize success</strong> — “How do users describe the moment they know the product ‘clicked’?”</li>
       <li><strong>Accessibility sweep</strong> — “Capture accessibility or usability pain points appearing most often.”</li>
     </ul>
-  </Tab>
-  <Tab title="Investors & analysts">
+  </AccordionItem>
+  <AccordionItem title="Investors & analysts">
     <ul>
       <li><strong>Pulse conviction</strong> — “What signals indicate growing enthusiasm vs. fatigue for this category?”</li>
       <li><strong>Segment sentiment</strong> — “Compare how early adopters versus casual users frame our moat.”</li>
       <li><strong>Benchmark winners</strong> — “Which adjacent products get cited as best-in-class, and why?”</li>
       <li><strong>Surface catalysts</strong> — “Pull quotes that reveal purchase triggers or churn triggers.”</li>
     </ul>
-  </Tab>
-  <Tab title="General operators">
+  </AccordionItem>
+  <AccordionItem title="General operators">
     <ul>
       <li><strong>Track narratives</strong> — “How is the community talking about the broader cultural shift around this topic?”</li>
       <li><strong>Find new ideas</strong> — “What fresh frameworks or keywords emerged this month?”</li>
       <li><strong>Brief leadership</strong> — “Draft a three-bullet recap I can paste into Slack for executives.”</li>
       <li><strong>Share TL;DR</strong> — “Turn today’s findings into a two-sentence summary for stakeholders.”</li>
     </ul>
-  </Tab>
-</Tabs>
+  </AccordionItem>
+</Accordion>
+
+<Callout>
+Craft every prompt with four ingredients: <mark>context</mark>, <mark>timeframe</mark>, <mark>desired output</mark>, and <mark>follow-up action</mark>. Hue performs best when you spell those out explicitly.
+</Callout>
 
 ## Cultural and behavioral prompt packs
 
