--- a/core-features/explore.mdx
+++ b/core-features/explore.mdx
@@ -1,6 +1,7 @@
 ---
 title: "Explore"
 description: "Investigate raw conversations, cluster patterns, and capture stories"
+aiSummary: "Use the Explore table to filter curated comments, review detailed AI analysis, and jump back to source conversations."
 ---
 
 ![Humyn Explore workspace](/screenshots/explore.png)
