--- a/core-features/metrics.mdx
+++ b/core-features/metrics.mdx
@@ -1,6 +1,7 @@
 ---
 title: "Metrics"
 description: "Translate Humyn signals into the numbers leaders expect"
+aiSummary: "Turn qualitative threads into sentiment and aspect metrics that leaders can trust, complete with evidence links."
 ---
 
 ## Why Metrics exists
