--- a/home/roadmap.mdx
+++ b/home/roadmap.mdx
@@ -1,6 +1,7 @@
 ---
 title: "Roadmap"
 description: "See where Humyn is headed next and help us prioritize the most valuable insights."
+aiSummary: "Scan current priorities, discovery tracks, and exploratory ideas, then share feedback to shape the roadmap."
 ---
 
 # Roadmap
