--- a/index.mdx
+++ b/index.mdx
@@ -1,6 +1,7 @@
 ---
 title: "Overview"
 description: "Everything you need to launch, learn, and iterate with Humyn Studio."
+aiSummary: "Start here to understand Humyn’s value, essential resources, workflows, and ways to stay connected." 
 ---
 
 # Welcome to Humyn Docs
