--- a/introduction/quickstart.mdx
+++ b/introduction/quickstart.mdx
@@ -1,6 +1,7 @@
 ---
 title: "Quickstart"
 description: "Launch Humyn in under an hour with the workflows our beta teams follow"
+aiSummary: "Follow five quick steps to ingest sources, run your first analysis, and jump into Explore or Chat with Hue."
 ---
 
 <iframe
@@ -29,10 +30,10 @@ Run through these five moves to go from sign-up to actionable insight in a singl
     Click `New project`, select an icon, set a clear name, and add a short description so everyone knows the lens you’re watching.
   </Card>
   <Card title="3. Open Add Comments" icon="comment-plus">
-    Jump into the Add Comments tab to define the research topic and the POV you want Humyn to monitor.
+    Jump into the <a href="../core-features/add-comments">Add Comments</a> tab to define the research topic and the POV you want Humyn to monitor.
   </Card>
   <Card title="4. Add keywords & Reddit sources" icon="list-check">
-    Enter the keywords, phrases, and Reddit URLs that capture your audience so Humyn ingests the right threads.
+    Enter the keywords, phrases, and Reddit URLs that capture your audience so Humyn ingests the right threads. Runs typically process within a few minutes depending on volume.
   </Card>
   <Card title="5. Explore or Chat for insight" icon="sparkles">
     Head to `Explore` for community-wide patterns or `Chat` to ask follow-up questions and unlock takeaways fast.
