--- a/workflows/analysts.mdx
+++ b/workflows/analysts.mdx
@@ -1,11 +1,16 @@
 ---
 title: "Analysts and Traders"
 description: "Detect market-moving sentiment and qualitative signals ahead of the curve."
+aiSummary: "Track market conversations, monitor leading indicators, and package analyst-ready briefings with Humyn." 
 ---
 
 # Analysts and Traders
 
 Whether you cover public markets, category trends, or competitive intel, Humyn helps you separate speculation from sustained signal.
+
+| Time | Best for | Primary outputs |
+| --- | --- | --- |
+| 45–60 minutes | Analysts, investors, strategy teams | Watchlist projects, weekly briefing, archive-ready quotes |
 
 <iframe
   width="100%"
