--- a/workflows/generic-use-case.mdx
+++ b/workflows/generic-use-case.mdx
@@ -1,6 +1,7 @@
 ---
 title: "Foundational Workflow"
 description: "End-to-end recipe for turning community chatter into actionable insight with Humyn."
+aiSummary: "Follow this foundational workflow to frame a mission, ingest sources, cluster insights, and share decisions." 
 ---
 
 # Generic Use Case
@@ -18,6 +19,10 @@ description: "End-to-end recipe for turning community chatter into actionable in
 />
 
 This workflow is the baseline loop we recommend for any team adopting Humyn. It balances signal intake, synthesis, and sharing so you can prove value in a single sprint.
+
+| Time | Best for | Primary outputs |
+| --- | --- | --- |
+| ~45 minutes | Cross-functional teams getting started | First curated dataset, summary notes, action list |
 
 <Callout>
 If you only follow one playbook, make it this one—the same structure scales to new personas, product lines, and markets without rework.
