--- a/workflows/product-managers.mdx
+++ b/workflows/product-managers.mdx
@@ -1,6 +1,7 @@
 ---
 title: "Product Managers, Designers & Researchers"
 description: "Translate community signal into confident roadmap bets and stakeholder-ready narratives."
+aiSummary: "Use this workflow to align on questions, gather conversations, prioritize themes, and deliver roadmap-ready insights." 
 ---
 
 # Product Managers, Designers & Researchers
@@ -18,6 +19,10 @@ description: "Translate community signal into confident roadmap bets and stakeho
 />
 
 Humyn gives PMs, designers, and researchers a continuous feed of customer voice without running a fresh survey every week. Follow this guide to move from fuzzy feedback to prioritized roadmap moves your stakeholders can trust.
+
+| Time | Best for | Primary outputs |
+| --- | --- | --- |
+| 60–75 minutes | PMs, designers, researchers validating direction | Roadmap evidence view, feature brief, sentiment watchlist |
 
 ## 1. Align on the question
 
