Nest additional prompt packs in accordion

--- a/core-features/chat-with-hue.mdx
+++ b/core-features/chat-with-hue.mdx
@@ -84,55 +84,62 @@ Craft every prompt with four ingredients: <mark>context</mark>, <mark>timeframe<
 
 ## Cultural and behavioral prompt packs
 
-Use these packs when you need to understand the culture powering your audience, not just the sentiment.
-
-### Community psychology & identity
-
-- “Describe the unspoken values or identity traits this community seems to share. What does belonging mean here?”  
-- “What emotions drive engagement in this space — pride, anxiety, curiosity, rebellion, etc.?”  
-- “How do members define ‘expertise’ or ‘credibility’? What makes someone respected or dismissed?”  
-- “Summarize the archetypes that appear in this community — the mentor, skeptic, innovator, purist, etc.”  
-- “What recurring fears or insecurities show up in posts, even if not said outright?”  
-
-### Behavior & rituals
-
-- “What daily or weekly habits define active members of this community?”  
-- “Identify moments of initiation or status signaling — what actions make someone a ‘real’ member?”  
-- “How does humor, sarcasm, or insider language build group cohesion here?”  
-- “What are the community’s ‘sacred’ topics versus taboo or overdone ones?”  
-- “How do members celebrate success, and how do they handle failure or mistakes?”  
-
-### Trend & sentiment dynamics
-
-- “What patterns of enthusiasm vs fatigue are emerging over time?”  
-- “Highlight new ideas, frameworks, or keywords gaining traction in the past three months.”  
-- “Which topics generate the most heated debate — and why?”  
-- “Detect shifts in tone or mood that might signal cultural or product fatigue.”  
-- “Who or what is being positioned as ‘the next big thing,’ and who’s skeptical of it?”  
-
-### Influence & discourse
-
-- “Map the informal leaders or hubs of influence in this space — who shapes what others think?”  
-- “Compare how top posters and casual members frame the same topics differently.”  
-- “What types of content (advice, critique, humor, data, story) earn the most credibility?”  
-- “Which users or subgroups challenge dominant opinions — and how does the community react?”  
-- “How does language evolve around influential moments or controversies?”  
-
-### Cultural signals & symbolism
-
-- “What symbols, memes, or metaphors repeatedly appear — and what do they represent culturally?”  
-- “How does this community’s slang reflect its worldview?”  
-- “What external trends (tech, politics, aesthetics) influence how people talk here?”  
-- “If this community were a person, what would their personality and worldview be?”  
-- “What aesthetic or visual markers show group belonging (colors, emojis, formatting, tone)?”  
-
-### Opportunity & insight extraction
-
-- “What unmet needs or frustrations appear frequently but without clear solutions?”  
-- “Which products, brands, or ideas are consistently mentioned with trust — or disdain?”  
-- “Identify hidden audience segments based on tone, motivation, or behavior.”  
-- “What ‘jobs-to-be-done’ language appears across discussions (phrases like ‘I wish I could…’ or ‘I struggle to…’)? ”  
-- “How might a new product or service naturally fit into this culture’s existing rituals?”  
+<Accordion>
+  <AccordionItem title="Community psychology & identity">
+    <ul>
+      <li>“Describe the unspoken values or identity traits this community seems to share. What does belonging mean here?”</li>
+      <li>“What emotions drive engagement in this space — pride, anxiety, curiosity, rebellion, etc.?”</li>
+      <li>“How do members define ‘expertise’ or ‘credibility’? What makes someone respected or dismissed?”</li>
+      <li>“Summarize the archetypes that appear in this community — the mentor, skeptic, innovator, purist, etc.”</li>
+      <li>“What recurring fears or insecurities show up in posts, even if not said outright?”</li>
+    </ul>
+  </AccordionItem>
+  <AccordionItem title="Behavior & rituals">
+    <ul>
+      <li>“What daily or weekly habits define active members of this community?”</li>
+      <li>“Identify moments of initiation or status signaling — what actions make someone a ‘real’ member?”</li>
+      <li>“How does humor, sarcasm, or insider language build group cohesion here?”</li>
+      <li>“What are the community’s ‘sacred’ topics versus taboo or overdone ones?”</li>
+      <li>“How do members celebrate success, and how do they handle failure or mistakes?”</li>
+    </ul>
+  </AccordionItem>
+  <AccordionItem title="Trend & sentiment dynamics">
+    <ul>
+      <li>“What patterns of enthusiasm vs fatigue are emerging over time?”</li>
+      <li>“Highlight new ideas, frameworks, or keywords gaining traction in the past three months.”</li>
+      <li>“Which topics generate the most heated debate — and why?”</li>
+      <li>“Detect shifts in tone or mood that might signal cultural or product fatigue.”</li>
+      <li>“Who or what is being positioned as ‘the next big thing,’ and who’s skeptical of it?”</li>
+    </ul>
+  </AccordionItem>
+  <AccordionItem title="Influence & discourse">
+    <ul>
+      <li>“Map the informal leaders or hubs of influence in this space — who shapes what others think?”</li>
+      <li>“Compare how top posters and casual members frame the same topics differently.”</li>
+      <li>“What types of content (advice, critique, humor, data, story) earn the most credibility?”</li>
+      <li>“Which users or subgroups challenge dominant opinions — and how does the community react?”</li>
+      <li>“How does language evolve around influential moments or controversies?”</li>
+    </ul>
+  </AccordionItem>
+  <AccordionItem title="Cultural signals & symbolism">
+    <ul>
+      <li>“What symbols, memes, or metaphors repeatedly appear — and what do they represent culturally?”</li>
+      <li>“How does this community’s slang reflect its worldview?”</li>
+      <li>“What external trends (tech, politics, aesthetics) influence how people talk here?”</li>
+      <li>“If this community were a person, what would their personality and worldview be?”</li>
+      <li>“What aesthetic or visual markers show group belonging (colors, emojis, formatting, tone)?”</li>
+    </ul>
+  </AccordionItem>
+  <AccordionItem title="Opportunity & insight extraction">
+    <ul>
+      <li>“What unmet needs or frustrations appear frequently but without clear solutions?”</li>
+      <li>“Which products, brands, or ideas are consistently mentioned with trust — or disdain?”</li>
+      <li>“Identify hidden audience segments based on tone, motivation, or behavior.”</li>
+      <li>“What ‘jobs-to-be-done’ language appears across discussions (phrases like ‘I wish I could…’ or ‘I struggle to…’)? ”</li>
+      <li>“How might a new product or service naturally fit into this culture’s existing rituals?”</li>
+    </ul>
+  </AccordionItem>
+</Accordion>
 
 ## Anatomy of a response
 
