Tweak quickstart wording and overview card

--- a/core-features/dashboard.mdx
+++ b/core-features/dashboard.mdx
@@ -14,8 +14,8 @@ description: "Command center for scanning Humyn signals at a glance"
 The Overview is your living status page for community signal. Instead of hopping between Explore, exports, or Slack threads, every spike, sentiment shift, and winning quote meets you here.
 
 <Columns cols={2}>
-  <Card title="Know the pulse" icon="wave-pulse">
-    Spot volume swings, trending themes, and tone changes across Reddit, Twitter, and YouTube at a glance.
+  <Card title="Reddit" icon="wave-pulse">
+    Know the pulse—spot volume swings, trending themes, and tone changes across Reddit, Twitter, and YouTube at a glance.
   </Card>
   <Card title="Share in seconds" icon="share-nodes">
     Capture the top quotes and visual tiles you need for stand-ups, investor updates, and research recaps.
