--- a/introduction/quickstart.mdx
+++ b/introduction/quickstart.mdx
@@ -24,7 +24,7 @@ Run through these five moves to go from sign-up to actionable insight in a singl
 
 <Columns cols={2}>
   <Card title="1. Sign in or create your account" icon="key">
-    Accept the invite or create a workspace, enable 2FA, and invite teammates who will review findings with you.
+    Accept the invite or create a workspace and enable 2FA.
   </Card>
   <Card title="2. Create a new project" icon="folder-plus">
     Click `New project`, select an icon, set a clear name, and add a short description so everyone knows the lens you’re watching.
