--- a/core-features/chat-with-hue.mdx
+++ b/core-features/chat-with-hue.mdx
@@ -4,6 +4,18 @@ description: "Ask natural-language questions and get instant answers from Humyn"
 aiSummary: "Learn how to craft persona-specific prompts, understand citation-backed answers, and turn Hue responses into actionable insight."
 ---
 
+<iframe
+  width="100%"
+  height="360"
+  src="https://www.youtube.com/embed/MaYHfDt8csk?si=uKa3gUq8L9ZlMcxE"
+  title="Chat with Hue overview"
+  frameBorder="0"
+  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+  referrerPolicy="strict-origin-when-cross-origin"
+  allowFullScreen
+  style={{ marginBottom: "2rem", borderRadius: "1rem", boxShadow: "0 24px 70px rgba(15, 23, 42, 0.18)" }}
+/>
+
 <img
   src="/screenshots/hue_chat.png"
   alt="Chat with Hue conversation showing summarized insight"
